2016-05-06  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Add general hinting check button.

	* src/ftinspect.cpp (MainGUI::checkHinting): New method.
	(MainGUI::createLayout, MainGUI::createConnections,
	MainGUI::setDefaults): Updated.
	(MainGUI::checkAutoHinting): Also handle `hintingModeLabel'.

	* src/ftinspect.h: Updated.

2016-05-06  Werner Lemberg  <wl@gnu.org>

	[ftinspect] More gamma slider settings.

	* src/ftinspect.cpp (MainGUI::createLayout): Set gamma slider tick
	intervals.

	(MainGUI::setDefaults): Set default value for gamma slider.
	Also move other spin box default values to this function.

2016-05-06  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Handle LCD filter change.

	* src/ftinspect.cpp (MainGUI::checkLcdFilter): New method.
	(MainGUI::setDefaults): Set up LCD filter mapping.
	Call `checkLcdFilter'.
	(MainGUI::createConnections): Register `checkLcdFilter'.

	* src/ftinspect.h (MainGUI): Updated.

2016-05-06  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Indent `show point indices' check box.

	* src/ftinspect.cpp (MainGUI::createLayout): Implement it.

	* src/ftinspect.h: Updated.

2016-05-06  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Minor.

	* src/ftinspect.cpp (MainGUI::checkAutoHinting): Fix logic for
	warping check box.

2016-05-06  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Add check box for auto-hinting.

	This allows easier hinting mode switch than having it in the hinting
	mode combo box.

	* src/ftinspect.cpp (MainGUI::checkAutoHinting): New method,
	containing almost stuff from ...
	(MainGUI::checkHintingMode): Updated.
	(MainGUI::createLayout): Updated; we also indent check boxes
	dependent on auto-hinting.
	(MainGUI::createConnections, MainGUI::setDefaults): Updated.

	* src/ftinspect.h: Updated.
	(HintingModes): Remove `HintingMode_AutoHinting' enum value.

2016-05-06  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Disable unavailable items in anti-aliasing combo box.

	* src/ftinspect.h (MainGUI): Make `setDefaults' public.